# av_kufar_bot

./: .env  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  test.py
teleg/: __init__.py
teleg/bot/: __init__.py  admin.py  commands.py  core.py  helpers.py  inline.py  keyboard.py  set_handlers.py  states.py
teleg/database/: __init__.py
teleg/parser/: helpers_pars.py  pars_data.py
